--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@nestjs/common": "^5.1.0",
-    "@nestjs/core": "^5.1.0", 
+    "@nestjs/core": "^5.1.0",
+    "class-transformer": "^0.1.9",
+    "class-validator": "^0.9.1",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
     "typescript": "^3.0.1"
@@ -47,7 +49,11 @@
     "webpack-node-externals": "^1.7.2"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".spec.ts$",
     "transform": {
