--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^5.1.0",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.9.1",
+    "nest-router": "^1.0.7",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
     "typescript": "^3.0.1"
