--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "webpack": "webpack --config webpack.config.js"
   },
   "dependencies": {
+    "@nest-middlewares/helmet": "^5.1.0",
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
+    "@nestjs/mongoose": "^5.2.2",
+    "@types/mongoose": "^5.2.18",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.9.1",
+    "mongoose": "^5.3.1",
     "nest-router": "^1.0.7",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
