--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "@nest-middlewares/helmet": "^5.1.0",
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
+    "@nestjs/graphql": "^5.4.0",
     "@nestjs/mongoose": "^5.2.2",
     "@types/mongoose": "^5.2.18",
+    "apollo-server-express": "^2.1.0",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.9.1",
+    "graphql": "^14.0.2",
+    "graphql-tools": "^4.0.0",
     "mongoose": "^5.3.1",
     "nest-router": "^1.0.7",
     "reflect-metadata": "^0.1.12",
